--- a/src/layout/myAppBar/index.scss
+++ b/src/layout/myAppBar/index.scss
@@ -3,11 +3,12 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 44px;
+  height: var(--myAppBarHeight);
   background-color: #3f51b5;
   color: white;
   font-size: 18px;
   box-shadow: 0 2px 5px #ccc, 0 3px 10px #ccc;
+  z-index: 10;
 
   :global {
     .contentContainer {
