--- a/src/styles/index.global.scss
+++ b/src/styles/index.global.scss
@@ -5,4 +5,11 @@
 
 html, body {
   margin: 0;
+  font-size: 14px;
+}
+
+.MuiIconButton-root {
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1) !important
+  }
 }
