--- a/src/styles/index.global.scss
+++ b/src/styles/index.global.scss
@@ -8,9 +8,13 @@ html, body {
   font-size: 14px;
 }
 
+*:not(input):not(button) {
+  user-select: none;
+}
+
 .MuiIconButton-root {
   &:hover {
-    background-color: rgba(255, 255, 255, 0.1) !important
+    background-color: rgba(255, 255, 255, 0.1) !important;
   }
 }
 
