--- a/src/components/business/settingsModal/index.scss
+++ b/src/components/business/settingsModal/index.scss
@@ -1,4 +1,13 @@
 .title {
-  font-size: 18px;
-  padding: 10px 0;
+  font-size: 17px;
+  margin: 10px 0;
+  border-left: 5px map-get($map: $colors, $key: 'main') solid;
+  padding-left: 10px;
+}
+
+.timeline {
+  width: 80%;
+  height: 3px;
+  margin: 0 auto;
+  display: flex;
 }
