--- a/src/components/business/danmakuPreModal/components/timeModify/index.scss
+++ b/src/components/business/danmakuPreModal/components/timeModify/index.scss
@@ -48,15 +48,49 @@
       height: 100%;
       background-color: rgb(113, 127, 249);
       box-sizing: border-box;
-      border: 1px white solid;
+      border-left: 2px white solid;
+      border-right: 2px white solid;
+      min-width: 10px;
+
+      @mixin clickable() {
+        min-width: 30px;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 0.5;
+        }
+      }
+
+      &[data-type="normal"] {
+        border: none;
+      }
 
       &[data-type="add"] {
         background-color: #5AF158;
+        @include clickable();
       }
 
       &[data-type="delete"] {
         background-color: #FF6E40;
+        @include clickable();
+      }
+
+      &[data-type="transparent"] {
+        background-color: transparent;
+        border: none;
+      }
+
+      &[data-type="shadow"] {
+        background-color: transparent;
+        border: none;
+        min-width: 30px;
       }
     }
+  }
+}
+
+:global {
+  .MuiTooltip-tooltip:not(foo) {
+    font-size: 12px;
   }
 }
