批量下载完成

--- a/src/layout/myAppBar/index.scss
+++ b/src/layout/myAppBar/index.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   height: var(--myAppBarHeight);
-  background-color: #3f51b5;
+  background-color: var(--primary);
   color: white;
   font-size: 18px;
   box-shadow: 0 2px 5px #ccc, 0 3px 10px #ccc;
