--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -2,24 +2,34 @@
   height: 100%;
 
   :global {
-    .videList {
-      overflow: auto;
-      box-sizing: border-box;
-      padding: 10px;
+    .videoListContainer {
+      position: relative;
 
-      .noData {
-        .hintText {
-          font-size: 20px;
-          color: #ccc;
+      .videoList {
+        overflow: auto;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 10px;
+
+        .noData {
+          .hintText {
+            font-size: 20px;
+            color: #ccc;
+          }
+        }
+
+        .allLoaded {
+          height: 50px;
+          line-height: 50px;
+          text-align: center;
+          color: #aaa;
         }
       }
+    }
 
-      .allLoaded {
-        height: 50px;
-        line-height: 50px;
-        text-align: center;
-        color: #aaa;
-      }
+    .fabContainer {
+      position: absolute;
+      bottom: 50px;
     }
   }
 }
