--- a/src/pages/home/components/sidePanel/index.scss
+++ b/src/pages/home/components/sidePanel/index.scss
@@ -1,5 +1,6 @@
 .sideMenuContainer {
-  width: 250px;
+  min-width: 250px;
+  max-width: 250px;
   height: 100vh;
   box-shadow: 0 0 5px #ccc;
   box-sizing: border-box;
