修改滚动条样式

--- a/src/layout/myAppBar/index.scss
+++ b/src/layout/myAppBar/index.scss
@@ -7,7 +7,7 @@
   background-color: var(--primary);
   color: white;
   font-size: 18px;
-  box-shadow: 0 2px 5px #ccc, 0 3px 10px #ccc;
+  // box-shadow: 0 2px 5px #ccc, 0 3px 10px #ccc;
   z-index: 10;
 
   :global {
