--- a/src/pages/danmaku2assModal/index.scss
+++ b/src/pages/danmaku2assModal/index.scss
@@ -1,3 +1,11 @@
 .actions {
   background-color: rgba($color: #000000, $alpha: 0.2) !important;
 }
+
+.textFieldsNotBreakLine {
+  :global {
+    .MuiInputLabel-shrink {
+      white-space: nowrap;
+    }
+  }
+}
