--- a/src/styles/index.global.scss
+++ b/src/styles/index.global.scss
@@ -13,7 +13,7 @@ html, body {
 }
 
 .MuiIconButton-root {
-  &:hover {
+  &:not(.MuiPickersDay-day):hover {
     background-color: rgba(255, 255, 255, 0.1) !important;
   }
 }
